# demo-repository

./: .gitignore  README.md  app.py  bgp_monitor.py  config.json  dynamic_balancer.sh  get_profitability.py  main.py  pyproject.toml  requirements.txt  ripestat_monitor.py  run.py  setup_akash_provider.sh  setup_iexec_worker.sh
.github/workflows/: auto-assign.yml
bgp-tool/: .env.example  .gitignore  README.md  app.py  audit_logic.py  bgp_monitor.py  config.json  database.py  mitigation.py  mitigation_logic.py  requirements.txt  ripestat_monitor.py
bgp-tool/templates/: base.html  history.html  index.html  rpki_helper.html
bgp_defense_tool/: __init__.py  database.py  template_filters.py
bgp_defense_tool/blueprints/: main.py  recovery_ui.py
bgp_defense_tool/logic/: audit_logic.py  mitigation_logic.py
bgp_defense_tool/monitors/: bgp_monitor.py  ripestat_monitor.py
bgp_defense_tool/static/: custom.css
bgp_defense_tool/templates/: analytics.html  auditing.html  automation_log.html  base.html  index.html  neighbors.html  on_router_defense.html  recovery.html
jules-scratch/verification/: verify_community_ui.py
scripts/: cisco_recovery.sh
templates/: index.html
tests/: test_app.py  test_audit_logic.py  test_mitigation_logic.py  test_ripestat_monitor.py
