[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bgp-defense-tool"
version = "1.0.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A BGP Active Defense and Hardware Recovery Platform"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask",
    "netmiko",
    "python-dotenv",
    "requests",
    "pymongo",
]

[project.urls]
"Homepage" = "https://github.com/example/bgp-defense-tool"
"Bug Tracker" = "https://github.com/example/bgp-defense-tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bgp_defense_tool*"]

[tool.setuptools.package-data]
"bgp_defense_tool" = ["py.typed"]
"" = ["scripts/cisco_recovery.sh"]
